--- a/step1.html
+++ b/step1.html
@@ -8,8 +8,9 @@
 
 <script>(function(s){s.dataset.zone='9922905',s.src='https://gizokraijaw.net/vignette.min.js'})([document.documentElement, document.body].filter(Boolean).pop().appendChild(document.createElement('script')))</script>
 
-<script>(function(s){s.dataset.zone='9922911',s.src='https://al5sm.com/tag.min.js'})([document.documentElement, document.body].filter(Boolean).pop().appendChild(document.createElement('script')))</script>
-
+<script>(function(s){s.dataset.zone='9922911',s.src='https://al5sm.com/tag.min.js'})([document.documentElement, document.body].pop().appendChild(document.createElement('script')))</script>
+<link href="https://fonts.googleapis.com/css2?family=Fugaz+One&display=swap" rel="stylesheet">
+  
   <style>
     :root{
       --bg:#0b1220;
@@ -36,7 +37,7 @@
       font: 15px/1.6 ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial, "Noto Sans", "Apple Color Emoji","Segoe UI Emoji";
       letter-spacing:.2px;
     }
-
+    
     /* নতুন হেডার সেকশনের স্টাইল */
     .header {
         background: linear-gradient(to right, #6a11cb 0%, #2575fc 100%);
@@ -155,7 +156,7 @@
       appearance:none; border:none; cursor:pointer;
       border-radius: 12px; padding: 15px 16px; 
       font-weight:800; 
-      font-size:16px !important; /* 🔥🔥🔥 এখানে পরিবর্তন করা হয়েছে 🔥🔥🔥 */
+      font-size:16px !important; 
       background: linear-gradient(180deg, #1a6fff, #0f5be7);
       color:white; box-shadow: 0 10px 18px rgba(26,111,255,.2), inset 0 0 0 1px rgba(255,255,255,.18);
       transition: transform .08s ease, box-shadow .2s ease, filter .2s ease;
@@ -212,7 +213,7 @@
         .website-name { font-size: 24px; }
         .website-icon { width: 30px; height: 30px; }
         .social-icon { width: 30px; height: 30px; }
-      }
+    }
     @media (max-width: 767px) {
         .header { padding: 8px 10px; gap: 5px; }
         .website-name { font-size: 16px; }
@@ -223,7 +224,6 @@
     #container-247476cdf6d68a31797ec615e7b10572 + .article {
       margin-top: 1px;
     }
-
   </style>
 </head>
 <body>
