--- a/video-player.html
+++ b/video-player.html
@@ -129,6 +129,31 @@
         margin-top: 20px;
       }
 
+      /* নতুন ডাউনলোড বাটনের স্টাইল */
+      .download-btn-container {
+          padding: 0 10px; /* ভিডিও কার্ডের সমান প্যাডিং */
+          margin: 10px auto; /* কার্ড থেকে সামান্য দূরত্ব */
+          max-width: 900px;
+          box-sizing: border-box;
+      }
+
+      .download-btn {
+          display: block;
+          width: 100%;
+          background: #4CAF50; /* বাটনের ব্যাকগ্রাউন্ড কালার */
+          color: white;
+          padding: 15px 20px;
+          text-align: center;
+          text-decoration: none;
+          font-size: 18px;
+          font-weight: bold;
+          border-radius: 10px;
+          transition: background-color 0.3s ease;
+      }
+      .download-btn:hover {
+          background: #45a049;
+      }
+
       /* মিডিয়া কোয়েরি */
       @media (min-width: 768px) {
         .header { padding: 15px 40px; }
@@ -139,6 +164,9 @@
         /* ডেস্কটপে কন্টেইনারের মার্জিন */
         .container {
            padding: 0 20px;
+        }
+        .download-btn-container {
+            padding: 0 20px;
         }
       }
       @media (max-width: 767px) {
@@ -177,17 +205,23 @@
         </div>
     </div>
     
-    <main class="container">
-        <div class="video-section">
-            <h1 id="video-title">ভিডিও লোড হচ্ছে...</h1>
-            <div id="video-player-container">
-                </div>
-        </div>
+    <main>
+      <div class="container">
+          <div class="video-section">
+              <h1 id="video-title">ভিডিও লোড হচ্ছে...</h1>
+              <div id="video-player-container">
+              </div>
+          </div>
+      </div>
+
+      <div class="download-btn-container">
+          <a href="#" class="download-btn">Download Video 📥</a>
+      </div>
         
-        <div class="ad-container">
-            <script async="async" data-cfasync="false" src="//pl27703152.revenuecpmgate.com/247476cdf6d68a31797ec615e7b10572/invoke.js"></script>
-            <div id="container-247476cdf6d68a31797ec615e7b10572"></div>
-        </div>
+      <div class="ad-container">
+          <script async="async" data-cfasync="false" src="//pl27703152.revenuecpmgate.com/247476cdf6d68a31797ec615e7b10572/invoke.js"></script>
+          <div id="container-247476cdf6d68a31797ec615e7b10572"></div>
+      </div>
     </main>
 
     <script>
