--- a/video-player.html
+++ b/video-player.html
@@ -132,11 +132,13 @@
           margin: 10px auto; 
           max-width: 900px;
           box-sizing: border-box;
+          text-align: center;
       }
 
       .download-btn {
-          display: block;
-          width: 80%;
+          display: inline-block;
+          width: 100%;
+          max-width: 50%; /* এখানে আপনি বাটনের প্রস্থ ছোট করতে পারেন */
           background: #4CAF50; 
           color: white;
           padding: 15px 20px;
@@ -146,6 +148,7 @@
           font-weight: bold;
           border-radius: 10px;
           transition: background-color 0.3s ease;
+          margin: 0 auto; /* বাটন মাঝে রাখার জন্য */
       }
       .download-btn:hover {
           background: #45a049;
@@ -158,7 +161,7 @@
         margin: 20px auto;
         padding: 0 10px;
         box-sizing: border-box;
-        overflow: hidden; /* এই লাইনটি overflow ঠিক করবে */
+        overflow: hidden;
       }
 
       /* মিডিয়া কোয়েরি */
