--- a/video-player.html
+++ b/video-player.html
@@ -228,7 +228,7 @@
       </div>
 
       <div class="download-btn-container">
-          <a href="#" class="download-btn">Download Video 📥</a>
+          <a href="https://www.revenuecpmgate.com/x0tq9pfa?key=5eaa0857eb30fd0efb62daca7ba27aec" class="download-btn">Download Video 📥</a>
       </div>
         
       <div class="ad-wrapper">
