--- a/index.html
+++ b/index.html
@@ -997,7 +997,7 @@
             const restartBtn = document.getElementById('restartBtn');
             const paginationContainer = document.getElementById('pagination-container');
             
-            const password = '@@@###';
+            const password = '🔞';
             let wrongPasswordCount = 0;
             const lockoutDuration = 5 * 60 * 1000;
 
