--- a/index.html
+++ b/index.html
@@ -852,7 +852,7 @@
     </div>
     
     <div class="header-right">
-        <a href="https://m.youtube.com/shorts/6O0ktfOu3xo" class="tutorial-button" target="_blank">
+        <a href="https://www.youtube.com/shorts/x_tL65sboXo" class="tutorial-button" target="_blank">
             Tutorial Video 🔞
         </a>
 
