--- a/step2.html
+++ b/step2.html
@@ -290,6 +290,15 @@
   </main>
 
   <script>
+
+    // সরাসরি লিংকে প্রবেশ বন্ধ করার জন্য এই কোডটি যুক্ত করা হয়েছে
+const homepageUrl = window.location.origin;
+const referrer = document.referrer;
+
+if (referrer === '' || !referrer.startsWith(homepageUrl)) {
+    window.location.href = homepageUrl;
+}
+    
     const STEP_SECONDS = 10;
     const counter = document.getElementById("counter");
     const bar = document.getElementById("bar");
