--- a/step1.html
+++ b/step1.html
@@ -6,8 +6,8 @@
   <title>টাইমার শেষেই চমক — এখনি দেখুন</title>
   <meta name="description" content="১০ সেকেন্ডের টাইমার সহ একটি সিঙ্গেল স্টেপ ফ্লো; টাইম শেষেই সরাসরি ভিডিও।" />
 
-<script>(function(s){s.dataset.zone='9922905',s.src='https://gizokraijaw.net/vignette.min.js'})([document.documentElement, document.body].filter(Boolean).pop().appendChild(document.createElement('script')))</script>
-
+<script>(function(s){s.dataset.zone='9922911',s.src='https://al5sm.com/tag.min.js'})([document.documentElement, document.body].filter(Boolean).pop().appendChild(document.createElement('script')))</script>
+  
 <script>(function(s){s.dataset.zone='9922911',s.src='https://al5sm.com/tag.min.js'})([document.documentElement, document.body].pop().appendChild(document.createElement('script')))</script>
 <link href="https://fonts.googleapis.com/css2?family=Fugaz+One&display=swap" rel="stylesheet">
   
