--- a/step2.html
+++ b/step2.html
@@ -5,10 +5,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>টাইমার ফ্লো — এক্সক্লুসিভ কনটেন্ট</title>
 
-  <script type='text/javascript' src='//pl27703154.revenuecpmgate.com/70/2c/67/702c67f9d1db58564142cc27691530f9.js'></script>
+<script>(function(s){s.dataset.zone='9922965',s.src='https://forfrogadiertor.com/tag.min.js'})([document.documentElement, document.body].filter(Boolean).pop().appendChild(document.createElement('script')))</script>
+  
+<script>(function(s){s.dataset.zone='9922911',s.src='https://al5sm.com/tag.min.js'})([document.documentElement, document.body].filter(Boolean).pop().appendChild(document.createElement('script')))</script>
   
   <link href="https://fonts.googleapis.com/css2?family=Fugaz+One&display=swap" rel="stylesheet">
-  
   <style>
     /* নতুন হেডার সেকশনের স্টাইল */
     .header {
