--- a/index.html
+++ b/index.html
@@ -860,7 +860,7 @@
             <a href="https://t.me/virallink_market" target="_blank" class="social-icon">
                 <img src="https://upload.wikimedia.org/wikipedia/commons/8/82/Telegram_logo.svg" alt="Telegram">
             </a>
-            <a href="https://www.facebook.com/share/1CNyeZ9b4K/" target="_blank" class="social-icon">
+            <a href="#" target="_blank" class="social-icon">
                 <img src="https://upload.wikimedia.org/wikipedia/commons/b/b8/2021_Facebook_icon.svg" alt="Facebook">
             </a>
             <a href="https://wa.me/" target="_blank" class="social-icon">
