--- a/video-player.html
+++ b/video-player.html
@@ -51,8 +51,8 @@
     }
     #main-content {
         flex-grow: 1; 
-        max-width: 900px;
-        margin: 0 auto;
+        max-width: 900px; /* ডেস্কটপে লেআউট ঠিক রাখতে */
+        margin: 0 auto; /* মাঝখানে আনতে */
         padding: 10px;
     }
     .header {
@@ -223,7 +223,7 @@
         display: grid;
         grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
         gap: 15px;
-        padding: 10px 10px 0px; 
+        padding: 10px; 
     }
     .card {
         background-color: var(--card-bg); 
@@ -387,10 +387,12 @@
         .website-name { font-size: 24px; }
         .website-icon { width: 30px; height: 30px; }
         .social-icon { width: 30px; height: 30px; }
+        #main-content {
+            padding: 20px;
+        }
         .container {
             grid-template-columns: 1fr 1fr 1fr;
             gap: 20px;
-            max-width: 1200px;
         }
         .card-title { font-size: 18px; }
         .card-image-container { height: 220px; }
@@ -404,9 +406,19 @@
         .website-name { font-size: 16px; }
         .website-icon { width: 20px; height: 20px; }
         .social-icon { width: 20px; height: 20px; }
+        #main-content {
+            padding: 5px;
+        }
+        .video-title-bar {
+            padding: 10px;
+        }
+        .video-title-bar h1 {
+            font-size: 16px;
+        }
         .container {
             grid-template-columns: 1fr 1fr; 
             gap: 10px;
+            padding: 5px; 
         }
         .card-title { font-size: 14px; }
         .card-image-container { height: 130px; }
