--- a/video-player.html
+++ b/video-player.html
@@ -484,7 +484,7 @@
         </div>
         
         <div class="recommended-section">
-            <h2>আপনার জন্য নির্বাচিত কিছু ভিডিও</h2>
+            <h2>⬇️ আপনার জন্য নির্বাচিত কিছু ভিডিও ⬇️</h2>
             <div class="container" id="recommended-container">
                 </div>
         </div>
