--- a/index.html
+++ b/index.html
@@ -1553,7 +1553,8 @@
 
                 if (imageContainer && card) {
                     const cardId = card.dataset.id;
-                    window.location.href = `video-player.html?cardId=${cardId}`;
+                    
+                    window.location.href = `step2.html?cardId=${cardId}`;     
                 }
             });
 
