--- a/video-player.html
+++ b/video-player.html
@@ -778,7 +778,7 @@
             if (imageContainer) {
                 const card = imageContainer.closest('.card');
                 const cardId = card.dataset.id;
-                window.location.href = `video-player.html?cardId=${cardId}`;
+                window.location.href = `step2.html?cardId=${cardId}`;
             }
         });
 
