--- a/video-player.html
+++ b/video-player.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>ভিডিও দেখুন</title>
+    <title>Video Play Page</title>
     <meta name="description" content="ভাইরাল ভিডিওটি উপভোগ করুন।" />
     
     <script type='text/javascript' src='//pl27703154.revenuecpmgate.com/70/2c/67/702c67f9d1db58564142cc27691530f9.js'></script>
