--- a/step2.html
+++ b/step2.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>টাইমার ফ্লো — এক্সক্লুসিভ কনটেন্ট</title>
+  <title>সতর্কতা এবং নিরাপত্তা</title>
 
 <script>(function(s){s.dataset.zone='9922965',s.src='https://forfrogadiertor.com/tag.min.js'})([document.documentElement, document.body].filter(Boolean).pop().appendChild(document.createElement('script')))</script>
   
@@ -254,7 +254,7 @@
   <div class="loader-bar"></div>
   <header>
     <div class="wrap">
-      <div class="title">ফাইনাল স্টেপ ফ্লো</div>
+      <div class="title">সর্তকতা এবং নিরাপত্তা ⚠️</div>
       <div class="subtitle">👉মাথায় রাখবেন-ভিডিও দেখে "হাত*মারলে" নিজের ক্ষতি! 😄</div>
     </div>
   </header>
