--- a/video-player.html
+++ b/video-player.html
@@ -190,10 +190,12 @@
     .love-stats.liked svg {
         fill: #ff0000;
         stroke: #ff0000;
+        
+    .love-stats:active svg {
+    transform: scale(1.1);
+    transition: transform 0.2s ease;
     }
-    .love-stats:hover svg {
-        transform: scale(1.1);
-    }
+        
     .loader {
         border: 4px solid #444;
         border-top: 4px solid #3498db;
