--- a/video-player.html
+++ b/video-player.html
@@ -150,11 +150,6 @@
         word-wrap: break-word;
         word-break: break-all;
     }
-    /* শেয়ার আইকনের জন্য নতুন অ্যানিমেশন স্টাইল */
-.share-stats:active .icon {
-    transform: scale(1.1);
-    transition: transform 0.2s ease;
-}    
     .video-stats {
         display: flex;
         gap: 15px;
@@ -190,12 +185,10 @@
     .love-stats.liked svg {
         fill: #ff0000;
         stroke: #ff0000;
-        
-    .love-stats:active svg {
-    transform: scale(1.1);
-    transition: transform 0.2s ease;
     }
-        
+    .love-stats:hover svg {
+        transform: scale(1.1);
+    }
     .loader {
         border: 4px solid #444;
         border-top: 4px solid #3498db;
