--- a/video-player.html
+++ b/video-player.html
@@ -150,6 +150,12 @@
         word-wrap: break-word;
         word-break: break-all;
     }
+
+ /* শেয়ার আইকনের জন্য নতুন অ্যানিমেশন স্টাইল */
+  .share-stats:active .icon {
+    transform: scale(1.1);
+    transition: transform 0.2s ease;
+   }   
     .video-stats {
         display: flex;
         gap: 15px;
