--- a/video-player.html
+++ b/video-player.html
@@ -195,6 +195,10 @@
     .love-stats:hover svg {
         transform: scale(1.1);
     }
+    .love-stats:active svg {
+    transform: scale(1.1);
+    transition: transform 0.2s ease;
+    }
     .loader {
         border: 4px solid #444;
         border-top: 4px solid #3498db;
