--- a/video-player.html
+++ b/video-player.html
@@ -264,6 +264,13 @@
         transition: background-color 0.3s ease;
         z-index: 5;
     }
+
+    /* শেয়ার আইকনের জন্য নতুন অ্যানিমেশন স্টাইল */
+.share-stats:active .icon {
+    transform: scale(1.1);
+    transition: transform 0.2s ease;
+}
+        
     .share-icon:hover {
         background-color: rgba(0, 0, 0, 0.7);
     }
