--- a/video-player.html
+++ b/video-player.html
@@ -809,17 +809,17 @@ if (referrer === '' || !referrer.startsWith(allowedOrigin)) {
                     const recommendedCards = allCardData
                         .filter(card => card.id !== cardId)
                         .sort(() => 0.5 - Math.random())
-                        .slice(0, 8);
+                        .slice(0, 6); // মোবাইলের জন্য ৬টি ভিডিও সাজেস্ট করা হয়েছে
                     renderCards(recommendedCards);
                     
                 } else {
                     videoTitleEl.textContent = "ভিডিও খুঁজে পাওয়া যায়নি।";
-                    showNotification('Video not found!', 3000, true);
+                    showNotification("ভিডিও খুঁজে পাওয়া যায়নি!", 3000, true);
                 }
             } catch (error) {
                 console.error('Error loading data:', error);
                 videoTitleEl.textContent = "Error loading video.";
-                showNotification('Error loading data. Please try again later.', 5000, true);
+                showNotification("ডেটা লোড করা যায়নি। অনুগ্রহ করে আবার চেষ্টা করুন।", 5000, true);
             }
         }
         
@@ -842,7 +842,7 @@ if (referrer === '' || !referrer.startsWith(allowedOrigin)) {
                     });
                 } else {
                     navigator.clipboard.writeText(shareUrl);
-                    showNotification('Link copied to clipboard!', 2000);
+                    showNotification("লিঙ্ক কপি করা হয়েছে!", 2000);
                 }
                 return;
             }
@@ -860,7 +860,7 @@ if (referrer === '' || !referrer.startsWith(allowedOrigin)) {
                     });
                 } else {
                     navigator.clipboard.writeText(shareUrl);
-                    showNotification('Link copied to clipboard!', 2000);
+                    showNotification("লিঙ্ক কপি করা হয়েছে!", 2000);
                 }
                 return;
             }
