--- a/video-player.html
+++ b/video-player.html
@@ -134,7 +134,7 @@
     }
     .video-title-bar {
         background-color: var(--card-bg);
-        padding: 15px;
+        padding: 8px 15px;
         border-radius: 10px;
         margin-top: 3px;
         display: flex;
