--- a/index.html
+++ b/index.html
@@ -804,7 +804,7 @@
             height: 20px;
         }
         .container {
-            grid-template-columns: 1fr;
+            grid-template-columns: 1fr 1fr;
             gap: 10px;
             padding: 10px 10px 0px;
         }
@@ -812,7 +812,7 @@
             font-size: 14px;
         }
         .card-image-container {
-            height: 180px;
+            height: 140px;
         }
         .modal-content {
             width: 95%;
