--- a/video-player.html
+++ b/video-player.html
@@ -44,6 +44,9 @@
         margin: 0;
         padding: 0;
         height: 100%;
+        font-family: sans-serif; /* ফন্ট স্টাইল ঠিক করা হয়েছে */
+        background-color: var(--bg-primary); 
+        color: var(--text-primary); 
     }
     
     body.no-scroll {
@@ -158,6 +161,7 @@
         color: var(--text-primary);
         word-wrap: break-word;
         word-break: break-all;
+        font-weight: bold; /* টাইটেল বোল্ড করা হয়েছে */
     }
     
     .more-text {
