--- a/video-player.html
+++ b/video-player.html
@@ -44,7 +44,7 @@
         margin: 0;
         padding: 0;
         height: 100%;
-        font-family: sans-serif; /* ফন্ট স্টাইল ঠিক করা হয়েছে */
+        font-family: sans-serif; 
         background-color: var(--bg-primary); 
         color: var(--text-primary); 
     }
@@ -153,6 +153,7 @@
         flex-direction: column;
         align-items: flex-start;
         flex-grow: 1;
+        justify-content: center; /* এটি উল্লম্বভাবে মাঝখানে আনবে */
     }
 
     .video-title-bar h1 {
@@ -161,7 +162,7 @@
         color: var(--text-primary);
         word-wrap: break-word;
         word-break: break-all;
-        font-weight: bold; /* টাইটেল বোল্ড করা হয়েছে */
+        font-weight: bold; 
     }
     
     .more-text {
