--- a/video-player.html
+++ b/video-player.html
@@ -590,7 +590,7 @@
         color: var(--text-secondary);
         text-align: center;
         padding: 20px 10px;
-        margin-top: 3px;
+        margin-top: 0; /* Changed to 0 to fix the footer issue */
     }
 
     .footer-links {
