--- a/video-player.html
+++ b/video-player.html
@@ -52,6 +52,9 @@
     
     body.no-scroll {
         overflow: hidden;
+        position: fixed;
+        width: 100%;
+        height: 100%;
     }
     
     .header {
@@ -414,7 +417,7 @@
 
     /* Description Panel Styles */
     #description-panel {
-        position: fixed; /* Changed to fixed for proper positioning on scroll */
+        position: fixed;
         left: 0;
         width: 100%;
         background-color: var(--modal-bg);
