--- a/video-player.html
+++ b/video-player.html
@@ -376,11 +376,13 @@
         padding: 10px;
     }
     .card-title {
-        font-size: 16px;
-        color: var(--text-primary); 
-        margin: 0;
-        white-space: normal;
-        word-wrap: break-word;
+    font-size: 16px;
+    color: var(--text-primary); 
+    margin: 0;
+    white-space: nowrap; /* টাইটেলকে এক লাইনে রাখে */
+    overflow: hidden;    /* অতিরিক্ত অংশ লুকিয়ে রাখে */
+    text-overflow: ellipsis;
+    font-weight: bold;
     }
     .card-divider {
         height: 1.5px;
