--- a/video-player.html
+++ b/video-player.html
@@ -374,15 +374,18 @@
         align-items: center;
         text-align: center;
         padding: 10px;
+        width: 100%;
+        box-sizing: border-box;
     }
     .card-title {
-    font-size: 16px;
-    color: var(--text-primary); 
-    margin: 0;
-    white-space: nowrap; /* টাইটেলকে এক লাইনে রাখে */
-    overflow: hidden;    /* অতিরিক্ত অংশ লুকিয়ে রাখে */
-    text-overflow: ellipsis;
-    font-weight: bold;
+        font-size: 16px;
+        color: var(--text-primary); 
+        margin: 0;
+        font-weight: bold; 
+        white-space: nowrap;      
+        overflow: hidden;         
+        text-overflow: ellipsis;  
+        width: 100%;
     }
     .card-divider {
         height: 1.5px;
