--- a/index.html
+++ b/index.html
@@ -364,12 +364,15 @@
         padding: 10px;
     }
     .card-title {
-        font-size: 16px;
-        color: var(--text-primary); 
-        margin: 0;
-        white-space: normal;
-        word-wrap: break-word;
-    }
+    font-size: 16px;
+    color: var(--text-primary); 
+    margin: 0;
+    font-weight: bold; 
+    white-space: nowrap; 
+    overflow: hidden; 
+    text-overflow: ellipsis;  
+    width: 100%; 
+}
     .card-divider {
         height: 1.5px;
         width: 80%;
