--- a/video-player.html
+++ b/video-player.html
@@ -913,6 +913,9 @@
                         </div>
                     </div>
                 </div>
+                <div class="card-content">
+                    <h3 class="card-title">${data.title}</h3>
+                </div>
                 <div class="card-footer">
                     <div class="card-stats view-stats">
                         <svg class="icon" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-eye">
