--- a/video-player.html
+++ b/video-player.html
@@ -340,6 +340,10 @@
         border-radius: 15px 15px 0 0;
         cursor: pointer;
     }
+    @media (min-width: 768px) {
+    .card-image-container {
+        height: 220px; /* ডেস্কটপের জন্য প্রস্তাবিত উচ্চতা */
+    }
     .play-icon {
         position: absolute;
         top: 50%;
