--- a/video-player.html
+++ b/video-player.html
@@ -698,7 +698,7 @@
     <footer>
         <div class="footer-links">
             <a href="#">About Us</a>
-            <a href="#">Terms & Conditions</a>
+            <a href="terms-and-conditions.html">Terms & Conditions</a>
             <a href="#">Privacy Policy</a>
         </div>
         <div class="footer-copyright">
