--- a/video-player.html
+++ b/video-player.html
@@ -699,7 +699,7 @@
         <div class="footer-links">
             <a href="#">About Us</a>
             <a href="terms-and-conditions.html">Terms & Conditions</a>
-            <a href="#">Privacy Policy</a>
+            <a href="privacy-policy.html">Privacy Policy</a>
         </div>
         <div class="footer-copyright">
             <p>&copy; 2024 Your Website Name. All Rights Reserved.</p>
