--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -34,7 +34,7 @@
       color: var(--highlight);
     }
     a {
-      color: #0073e6; /* এখানে রঙ নীল করা হয়েছে */
+      color: #0073e6;
       text-decoration: none;
     }
     a:hover {
@@ -42,6 +42,12 @@
     }
     .effective-date {
         color: var(--highlight);
+    }
+    .footer {
+      text-align: center;
+      margin-top: 30px;
+      color: var(--text-muted);
+      font-size: 0.8em;
     }
   </style>
 </head>
@@ -124,5 +130,10 @@
     For any questions or concerns regarding this Privacy Policy, please contact us at:
   </p>
   <p><strong>Email:</strong> <a href="mailto:support@secretbinodon.com">support@secretbinodon.com</a></p>
+
+  <footer class="footer">
+    <p>&copy; 2024 SecretBinodon. All Rights Reserved.</p>
+  </footer>
+
 </body>
 </html>
