--- a/index.html
+++ b/index.html
@@ -932,7 +932,7 @@
                     <a href="privacy-policy.html">Privacy Policy</a>
                 </div>
                 <div class="footer-copyright">
-                    <p>&copy; 2024 Your Website Name. All Rights Reserved.</p>
+                    <p>&copy; 2025 SecretBinodon. All Rights Reserved.</p>
                 </div>
             </footer>
         </div>
