--- a/index.html
+++ b/index.html
@@ -1597,11 +1597,12 @@
                     return;
                 }
 
-                if (imageContainer && card) {
+                    if (imageContainer && card) {
                     const cardId = card.dataset.id;
                     
-                    window.location.href = `step2.html?cardId=${cardId}`;     
+                    window.location.href = `https://bdviralvideoviral.blogspot.com/p/step2.html?cardId=${cardId}`;     
                 }
+
             });
 
             categoryButtons.forEach(button => {
