--- a/index.html
+++ b/index.html
@@ -1600,8 +1600,9 @@
                     if (imageContainer && card) {
                     const cardId = card.dataset.id;
                     
-                    window.location.href = `https://bdviralvideoviral.blogspot.com/p/timer-page.html?cardId=${cardId}`; 
-                }
+                    window.location.href = `https://bdviralvideoviral.blogspot.com/?cardId=${cardId}`; 
+
+                    }
 
             });
 
